--- a/main.html
+++ b/main.html
@@ -13,7 +13,12 @@
     </div>
     
     <div id="main" class="main">
-      <p>Fight the good fight.</p>
+      <p>
+      Hey everyone, this is what we got done on day one!<br><br>
+      <a href="member/connor_baker.html">Connor Baker's page!</a><br>
+      <a href="member/glavin_wiechert.html">Glavin Wiechert's page!</a><br><br> 
+      Fight the good fight.
+      </p>
     </div>
     
     <div id="footer" class="main">
