altered the paths within devin_horsman.html to reflect the changes in directory structure

--- a/member/devin_horsman.html
+++ b/member/devin_horsman.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Rad Future</title>
-<link href="style.css" rel="stylesheet" />
+<link href="css/style.css" rel="stylesheet" />
 <script type="text/javascript">
     function colorize(node){
         var colors = ["#111", "#222", "#333"];
@@ -20,7 +20,7 @@
 </script>
 </head>
 <body onLoad="textTimer()">
-<img id="portrait" src="devinPortrait.gif" />
+<img id="portrait" src="image/devinPortrait.gif" />
 <h1 name="name">D<span>e<span>v<span>i<span>n <span>h<span>o<span>r<span>s<div class="sideways">man</div></span></span></span></span></span></span></span></span></h1>
 </body>
 </html>
